--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+title: [Hispanics who College]
+description: [A short description of your site's purpose]
